src/objects/Schedules__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Pick up schedules for trash routes.  This will be either city and/or region wide schedules.</description>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <description>Date that this schedule is inactive</description>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <description>The effective start date of this schedule</description>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schedule_Image__c</fullName>
        <label>Schedule Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Schedule</label>
    <pluralLabel>Schedules</pluralLabel>
</CustomObject>